# distributed-key-value-store

./: .gitignore  CMakeLists.txt  README.md  crash_results.csv
benchmarks/results/: schema.md
client/: client.cpp
docs/: design.md  experiments.md
internal/proto/: kv.proto
proto/: CMakeLists.txt  kv.proto
raw_logs/: out_172.31.34.114_16_0.1_abd.txt  out_172.31.34.114_16_0.1_block.txt  out_172.31.34.114_16_0.9_abd.txt  out_172.31.34.114_16_0.9_block.txt  out_172.31.34.114_1_0.1_abd.txt  out_172.31.34.114_1_0.1_block.txt  out_172.31.34.114_1_0.9_abd.txt  out_172.31.34.114_1_0.9_block.txt  out_172.31.34.114_2_0.1_abd.txt  out_172.31.34.114_2_0.1_block.txt  out_172.31.34.114_2_0.9_abd.txt  out_172.31.34.114_2_0.9_block.txt  out_172.31.34.114_4_0.1_abd.txt  out_172.31.34.114_4_0.1_block.txt  out_172.31.34.114_4_0.9_abd.txt  out_172.31.34.114_4_0.9_block.txt  out_172.31.34.114_8_0.1_abd.txt  out_172.31.34.114_8_0.1_block.txt  out_172.31.34.114_8_0.9_abd.txt  out_172.31.34.114_8_0.9_block.txt  out_172.31.34.114_N1_16_0.1_abd.txt  out_172.31.34.114_N1_16_0.1_block.txt  out_172.31.34.114_N1_16_0.9_abd.txt  out_172.31.34.114_N1_16_0.9_block.txt  out_172.31.34.114_N1_1_0.1_abd.txt  out_172.31.34.114_N1_1_0.1_block.txt  out_172.31.34.114_N1_1_0.9_abd.txt  out_172.31.34.114_N1_1_0.9_block.txt  out_172.31.34.114_N1_2_0.1_abd.txt  out_172.31.34.114_N1_2_0.1_block.txt  out_172.31.34.114_N1_2_0.9_abd.txt  out_172.31.34.114_N1_2_0.9_block.txt  out_172.31.34.114_N1_4_0.1_abd.txt  out_172.31.34.114_N1_4_0.1_block.txt  out_172.31.34.114_N1_4_0.9_abd.txt  out_172.31.34.114_N1_4_0.9_block.txt  out_172.31.34.114_N1_8_0.1_abd.txt  out_172.31.34.114_N1_8_0.1_block.txt  out_172.31.34.114_N1_8_0.9_abd.txt  out_172.31.34.114_N1_8_0.9_block.txt  (+200 more)
results/: distributed_results.csv
scripts/: crash_log_parser.py  distributed_load_runner.sh  distributed_parser.py  parse_distributed_logs.py  run_all_crash_experiments.sh  run_client_crash_experiment.sh  run_matrix.sh
server/: replica_state.hpp  server.cpp
tests/: test_cases.txt
